tests/snapshots/generator__advanced_create_files@_1_10_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 10 where each directory contains approximately 1 other directory.
Created 2 files across 6 directories.

/0
/0.dir
/1
/0.dir/0.dir
/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/0.dir/0.dir/0.dir

0x46d0580caa71a954
